--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yoga</title>
-	
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
-
+	<script src="js/script.js"></script>
+	<script src="js/time.js"></script>
+	<script src="js/myMethods.js"></script>
 </head>
 <body>
 	<header>
@@ -175,8 +176,8 @@
 						Мы с вами свяжемся
 					</div>
 					<form id="form">
-						<input required type="email" placeholder="Ваша почта">
-						<input required type="tel" placeholder="Ваш телефон">
+						<input required type="email" name="email" placeholder="Ваша почта">
+						<input required type="tel" name="tel" placeholder="Ваш телефон">
 						<button type="submit">Отправить</button>
 					</form>
 				</div>
@@ -231,6 +232,5 @@
 					</div>
 	 		</div>
 	</div>
-	<script src="js/script.js"></script>
 </body>
 </html>
