--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">Количество людей</div>
-					<input type="number" min="1" step="1" class="counter-block-input">
+					<input type="text" min="1" step="1" class="counter-block-input">
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">На сколько дней</div>
-					<input type="number" min="1" step="1" class="counter-block-input">
+					<input type="text" min="1" step="1"  class="counter-block-input">
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">Выберете базу</div>
