--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Yoga</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/script.js"></script>
-	<script src="js/time.js"></script>
-	<script src="js/myMethods.js"></script>
+	<script src="dist/main.js"></script>
+	<style>
+	body::-webkit-scrollbar {
+		width: 0px;
+		background: rgba(255, 255, 255, 0.0);
+	}</style>
 </head>
 <body>
 	<header>
