--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
 	 		</div>
 	</div>
 </body>
-<script src="./src/max_win.js"></script>
+<script src="src/max_win.js"></script>
 <script src="dist/main.js"></script>
 </html>
